Bug 322429 - Calligra Words crashed when I tried to reduce columns on page
Summary: Calligra Words crashed when I tried to reduce columns on page
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.4
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
: 322434 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-16 10:47 UTC by Jiří Martínek
Modified: 2015-03-30 21:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jiří Martínek 2013-07-16 10:47:55 UTC
Application: calligrawords (2.6.4)
KDE Platform Version: 4.10.5
Qt Version: 4.8.4
Operating System: Linux 3.9.9-302.fc19.x86_64 x86_64
Distribution: "Fedora release 19 (Schrödinger’s Cat)"

-- Information about the crash:
- What I was doing when the application crashed:

In .docx document I had 2 columns on page. When I tried to make just one column, the application crashed.

The crash can be reproduced every time.

-- Backtrace:
Application: Calligra Words (calligrawords), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#5  0x000000307c832b56 in QTextDocument::addResource(int, QUrl const&, QVariant const&) () from /lib64/libQtGui.so.4
#6  0x00000030884640e9 in KoTextDocument::setSelections(QVector<QAbstractTextDocumentLayout::Selection> const&) () from /lib64/libkotext.so.11
#7  0x0000003082915e78 in KoFindText::Private::updateSelections() () from /lib64/libkomain.so.11
#8  0x000000308291751a in KoFindText::clearMatches() () from /lib64/libkomain.so.11
#9  0x00000030829172b3 in KoFindText::setDocuments(QList<QTextDocument*> const&) () from /lib64/libkomain.so.11
#10 0x00007f8255ec37e2 in KWView::refreshFindTexts() () from /lib64/libwordsprivate.so.11
#11 0x00007f8255eac095 in KWView::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) [clone .part.25] () from /lib64/libwordsprivate.so.11
#12 0x000000349078dadc in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /lib64/libQtCore.so.4
#13 0x00007f8255eac8a0 in KWDocument::shapeAdded(KoShape*, KoShapeManager::Repaint) () from /lib64/libwordsprivate.so.11
#14 0x00007f8255eb93f2 in KWDocument::addFrame(KWFrame*) () from /lib64/libwordsprivate.so.11
#15 0x00007f8255eacb2c in KWDocument::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) [clone .part.39] () from /lib64/libwordsprivate.so.11
#16 0x000000349078dadc in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /lib64/libQtCore.so.4
#17 0x00007f8255eac50f in KWFrameSet::frameAdded(KWFrame*) () from /lib64/libwordsprivate.so.11
#18 0x00007f8255eee919 in KWFrameSet::addFrame(KWFrame*) () from /lib64/libwordsprivate.so.11
#19 0x00007f8255eed6e1 in KWFrame::KWFrame(KoShape*, KWFrameSet*, KoTextAnchor*) () from /lib64/libwordsprivate.so.11
#20 0x00007f8255ee9f37 in KWFrameLayout::createCopyFrame(KWFrameSet*, KWPage const&) () from /lib64/libwordsprivate.so.11
#21 0x00007f8255eec931 in KWFrameLayout::createNewFramesForPage(int) () from /lib64/libwordsprivate.so.11
#22 0x00007f8255f03de9 in KWPageInsertCommand::redo() () from /lib64/libwordsprivate.so.11
#23 0x00007f8255eb91e9 in KWDocument::insertPage(int, QString const&, bool) () from /lib64/libwordsprivate.so.11
#24 0x00007f8255eb92e1 in KWDocument::appendPage(QString const&, bool) () from /lib64/libwordsprivate.so.11
#25 0x00007f8255ee661b in KWRootAreaProvider::provideNext(KoTextDocumentLayout*) () from /lib64/libwordsprivate.so.11
#26 0x00007f8255ee6baa in KWRootAreaProvider::provide(KoTextDocumentLayout*) () from /lib64/libwordsprivate.so.11
#27 0x000000308343d5be in KoTextDocumentLayout::doLayout() () from /lib64/libtextlayout.so.11
#28 0x000000308343dd28 in KoTextDocumentLayout::layout() () from /lib64/libtextlayout.so.11
#29 0x0000003490791e4e in QObject::event(QEvent*) () from /lib64/libQtCore.so.4
#30 0x000000307c5c846c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQtGui.so.4
#31 0x000000307c5cea30 in QApplication::notify(QObject*, QEvent*) () from /lib64/libQtGui.so.4
#32 0x000000308287e357 in KoApplication::notify(QObject*, QEvent*) () from /lib64/libkomain.so.11
#33 0x0000003490779f7d in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /lib64/libQtCore.so.4
#34 0x000000349077cd3f in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib64/libQtCore.so.4
#35 0x00000034907a72d3 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQtCore.so.4
#36 0x0000003488e47e06 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#37 0x0000003488e48158 in g_main_context_iterate.isra.22 () from /lib64/libglib-2.0.so.0
#38 0x0000003488e481fc in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#39 0x00000034907a6cb5 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#40 0x000000307c664d56 in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtGui.so.4
#41 0x0000003490778bdf in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#42 0x0000003490778ed5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#43 0x000000349077dfbb in QCoreApplication::exec() () from /lib64/libQtCore.so.4
#44 0x0000003089402ee5 in kdemain () from /lib64/libkdeinit4_calligrawords.so
#45 0x0000003486a21b75 in __libc_start_main () from /lib64/libc.so.6
#46 0x0000000000400921 in _start ()

Reported using DrKonqi
Comment 1 Camilla Boemann 2013-07-16 12:34:58 UTC
*** Bug 322434 has been marked as a duplicate of this bug. ***
Comment 2 Pierre Ducroquet 2015-03-30 21:31:50 UTC
Git commit 1115da8b1427d1aecb27c3096ed337549cadfaf9 by Pierre Ducroquet.
Committed on 30/03/2015 at 21:25.
Pushed by ducroquet into branch 'calligra/2.9'.

Clean properly when removing a KoTextLayoutRootArea

Clean up various fields when calling releaseAllAfter,
and remove the rootArea from its associated shape
on delete.

M  +6    -0    libs/textlayout/KoTextLayoutRootArea.cpp
M  +4    -7    words/part/KWRootAreaProvider.cpp

http://commits.kde.org/calligra/1115da8b1427d1aecb27c3096ed337549cadfaf9