Clean properly when removing a KoTextLayoutRootArea

Clean up various fields when calling releaseAllAfter,
and remove the rootArea from its associated shape
on delete.

BUG: 322429